--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,8 @@
           <span class="badge">
             {{ server.status }}
           </span>
-          <strong>{{ server.name }}</strong> | {{ server.instanceType }} |
+          <strong>{{ server.name }}</strong> |
+          {{ server.instanceType | uppercase }} |
           {{ server.started }}
         </li>
       </ul>
