Used two pipes in a one string interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           </span>
           <strong>{{ server.name }}</strong> |
           {{ server.instanceType | uppercase }} |
-          {{ server.started | date: 'shortDate' }}
+          {{ server.started | date: "shortDate" | uppercase }}
         </li>
       </ul>
     </div>
