--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
           <span class="badge">
             {{ server.status }}
           </span>
-          <strong>{{ server.name | shorten }}</strong> |
+          <strong>{{ server.name | shorten: 10 }}</strong> |
           {{ server.instanceType | uppercase }} |
           {{ server.started | date: "shortDate" | uppercase }}
         </li>
