Added add server button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,10 @@
         type="text"
         [(ngModel)]="filteredStatus"
       />
+      <br />
+      <button class="btn btn-primary" (click)="onAddServer()">
+        Add server
+      </button>
       <ul class="list-group">
         <li
           class="list-group-item"
